--- a/libs/modules/feed.less
+++ b/libs/modules/feed.less
@@ -11,7 +11,7 @@
 // Override the default list styling
 .feed {
     list-style: none;
-    .spacing(margin,@box-spacing,0);
+    margin: @box-spacing,0;
     padding: 0;
     display: flex;
     flex-direction: column;
