--- a/libs/modules/letter.less
+++ b/libs/modules/letter.less
@@ -13,8 +13,8 @@
 /* A sample letter - it is supposed to mimic a sheet of paper */
 .letter-sample {
     border: 1px solid @gray-1;
-    .spacing(padding,@box-spacing*2);
-    .spacing(margin,@box-spacing*2,0);
+    padding: @box-spacing*2;
+    margin: @box-spacing*2 0;
     -moz-box-shadow: 2px 2px 2px @gray-1;
     -webkit-box-shadow: 2px 2px 5px @gray-1;
     box-shadow: 2px 2px 2px @gray-1;
