--- a/libs/modules/environment-marker.less
+++ b/libs/modules/environment-marker.less
@@ -18,7 +18,7 @@
 
 .environment-marker__container {
     background: @heritage-yellow;
-    .spacing(padding,@box-spacing-horizontal*.1,@box-spacing-horizontal*.5);
+    padding: @box-spacing-horizontal*.1 @box-spacing-horizontal*.5;
     font-weight: bold;
     border-radius: 0 0 .5em .5em;
     z-index: 100000;
@@ -26,6 +26,6 @@
     display: inline-block;
     text-align: left;
 }
-   
+
 
 
