--- a/libs/modules/extent-switcher.less
+++ b/libs/modules/extent-switcher.less
@@ -8,23 +8,23 @@
 .beta-extent-switcher {
 	float: left;
 	border: @blue-light 1px solid;
-	.spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
-	
+	padding: @box-spacing-vertical @box-spacing-horizontal;
+
 	@media screen and (max-width: @screen-xs-max) {
 		width: 100%;
-		float: none;	
+		float: none;
 	}
-	
+
 	h2.beta-extent-switcher__heading {
 		font-size: @font-size-h5;
 		color: @heritage-blue;
 		margin-top: 0;
 	}
-	
+
 	.custom-dropdown__select {
 		width: 80%;
 	}
-	
+
 	.custom-dropdown__button {
 		width: 17%;
 		float: right;
