--- a/libs/modules/footer-feedback.less
+++ b/libs/modules/footer-feedback.less
@@ -1,18 +1,18 @@
 ﻿/**
  * FOOTER FEEDBACK
- * 
+ *
  * This is the feedback link, above the footer and below content, used on all pages
  */
 
 
- .footer-feedback {  
+ .footer-feedback {
     background-color: @white;
     overflow: hidden; // Prevent collapsing margins
     .text-align-center;
 }
 
  .footer-feedback__content {
-    .spacing(padding,0,@box-spacing-horizontal);
+    padding: 0 @box-spacing-horizontal;
     .limit-width();
 
     @media (max-width: @screen-xs-max ) {
