--- a/libs/modules/page-list.less
+++ b/libs/modules/page-list.less
@@ -1,5 +1,5 @@
 ﻿/**
- * PAGE LIST 
+ * PAGE LIST
  *
  *
  * Not sure when this is used.
@@ -7,7 +7,7 @@
 
 
 .page-list {
-    .spacing(margin,@box-spacing*1.5,0);
+    margin: @box-spacing*1.5 0;
 }
 
 .page-list__item {
