--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -2,7 +2,7 @@
  * SEARCH RESULTS
  *
  * Styling for the results in the Search results page.
- * 
+ *
  */
 
 
@@ -11,7 +11,7 @@
     padding: 0;
 }
 .search-results__item {
-    .spacing(margin,@box-spacing-horizontal,0);
+    margin: @box-spacing-horizontal 0;
 }
 
 .search-results__heading {
@@ -20,12 +20,12 @@
 }
 
 .search-results__description {
-    .spacing(margin,@box-spacing-horizontal*.25,0);
+    margin: @box-spacing-horizontal*.25 0;
 }
 
 .search-results__section {
     color:#999;
-    .spacing(margin,@box-spacing-horizontal*.25,0);
+    margin: @box-spacing-horizontal*.25 0;
 }
 
 .search__spellcheck {
@@ -34,4 +34,4 @@
         font-weight: @font-weight-bold;
     }
 }
-       
+
