--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -13,7 +13,7 @@
 	    font-size: @font-size-medium;
 	    line-height: @line-height-large;
         margin: 0;
-        .spacing(padding,@box-spacing-horizontal*.7,0);
+        padding: @box-spacing-horizontal*.7 0;
     }
 
     & > .webchat .webchat__button {
