--- a/libs/modules/skip-nav.less
+++ b/libs/modules/skip-nav.less
@@ -14,7 +14,7 @@
 
     & > a {
         background: @white;
-        .spacing(padding,@box-spacing-horizontal*.5);
+        padding: @box-spacing-horizontal*.5;
         display: inline-block;
     }
 }
