--- a/libs/modules/tablesort.less
+++ b/libs/modules/tablesort.less
@@ -15,7 +15,7 @@
 	position: absolute; right: 0; top: 0;
 	cursor: pointer;
     color: @white;
-    background: none;   
+    background: none;
 }
 
 .tablesort-button:focus {
@@ -48,7 +48,7 @@
     width: 100%;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    .spacing(padding,@box-spacing*.1);
+    padding: @box-spacing*.1;
 }
 input.tablesort-filter {
     background-image: url(assets/images/icon-search.png);
