--- a/libs/modules/page-tree.less
+++ b/libs/modules/page-tree.less
@@ -9,7 +9,7 @@
 .page-tree ul {
   list-style: none;
   padding: 0;
-  .spacing(margin,@box-spacing*.5,0,@box-spacing,0); 
+  margin: @box-spacing*.5 0 @box-spacing 0;
 }
 
 .page-tree > ul > li > a {
