--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -24,11 +24,11 @@
 
 .side-nav-beta {
     .main-content__sidebar;
-    .spacing(margin,0,0,@box-spacing,0);
+    margin: 0 0 @box-spacing 0;
 
     &.sibling {
         border: 0 solid @inventive-teal;
-        .spacing(border-top-width,.5);
+        border-top-width: .5;
         background-color: @gray-8;
         .side-nav-beta__sibling a:hover {
             background-color: @gray-6;
@@ -48,7 +48,7 @@
         //border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
-            .spacing(padding,@box-spacing-vertical*.75,@box-spacing-horizontal*.75);
+            padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
             display: block;
             border-bottom: none;
         }
@@ -89,7 +89,7 @@
         font-weight: @font-weight-bolder;
         border-color: @heritage-blue-lighter;
         a {
-            cursor: default;            
+            cursor: default;
         }
         span {
             border: none;
@@ -104,7 +104,7 @@
         float: none;
         width: 100%;
     }
-    
+
     ul {
         color: @text-color;
         list-style: none;
@@ -121,7 +121,7 @@
     li.current {
         font-weight: @font-weight-bold;
         background-color: @blue-lighter;
-        .spacing(padding,@box-spacing*.4,@box-spacing*.6,@box-spacing*.6,@box-spacing*.6);
+        padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
         margin: 0;
         border-bottom: 0.1em solid @blue-light;
     }
@@ -132,26 +132,26 @@
         color: @heritage-blue;
         margin: 0;
         border-bottom: 0.1em solid @white;
-        
+
         .side-nav__group-title {
             display: block;
-            .spacing(padding,@box-spacing*.7,@box-spacing*.6,@box-spacing*.9,@box-spacing*.6);
+            padding: @box-spacing*.7 @box-spacing*.6 @box-spacing*.9 @box-spacing*.6;
         }
     }
     li.side-nav__item {
-        .spacing(padding,@box-spacing*.4,@box-spacing*.6,@box-spacing*.6,@box-spacing*.6);
-        
+        padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
+
         a {
             text-decoration: none;
             padding: 0;
         }
-        
+
         &.-current {
             font-weight: @font-weight-bold;
             background-color: @blue-lighter;
             border-bottom: 0.1em solid @blue-light;
         }
-        
+
         &:hover {
             background-color: @gray-6;
         }
