--- a/libs/modules/title.less
+++ b/libs/modules/title.less
@@ -9,18 +9,18 @@
 .title__brand {
     // The brand image is floated right of the title
     float: right;
-    .spacing(margin,0,@box-spacing-horizontal);
+    margin: 0 @box-spacing-horizontal;
     .mixin-fit-content;
 }
 
 @media (max-width: @screen-sm-max) {
     // On a mobile it appears under the title and the image is floated left of the description.
     // We need to use flexbox to change the order
-    
+
     .title {
         //.flex;
         //.flex-direction(column-reverse);
-        
+
         // Flex does not do margin collapsing - reduce margin to compensate
         & > h1 {
             //margin-bottom: .1em;
