--- a/libs/modules/twitter.less
+++ b/libs/modules/twitter.less
@@ -28,6 +28,6 @@
         color: @gray-1;
         font-size: @font-size-small;
         padding: 0;
-        .spacing(margin,-@box-spacing*.5,0,@box-spacing,@box-spacing*4);
+        margin: -@box-spacing*.5 0 @box-spacing @box-spacing*4;
     }
 }
