--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -48,7 +48,7 @@
 
 	&__header {
 		//border-bottom: 1px solid @gray-6;
-		.spacing(padding,@box-spacing-vertical,0);
+		padding: @box-spacing-vertical 0;
 		//background-color: @heritage-blue-lightest;
 		//&:extend(h3);
 		position: relative;
