Removed spacing mixin from compiling

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -31,9 +31,9 @@
 	//@import "mixins/popup";
 	@import "mixins/vertical-align";
 	@import "mixins/btn-icon";
-	@import "mixins/spacing";
+	//@import "mixins/spacing";
 
-	/* Module files 
+	/* Module files
 	@import "modules/extent-switcher-modal";
 	@import "modules/header";
 	@import "modules/title";
