--- a/libs/site.less
+++ b/libs/site.less
@@ -1,6 +1,7 @@
 /* Vendor files */
 @import "vendors/normalize";
 @import "vendors/font-awesome/less/font-awesome";
+@import "vendors/brand-icon";
 
 /* Override files */
 @import "styleguide/guide";
