Initial commit of brand icon page

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -82,6 +82,8 @@ block content
 					li
 						a(href="section-index.html") Section index
 					//li
+						a(href="section-index-dev.html") Section index development
+					//li
 					//	a(href="employment-checker.html") Example of in-content tool
 
 					// Example PIP content  
@@ -93,3 +95,12 @@ block content
 					//	a(href="pip-dressing.html") PIP help with getting dressed question
 					//li
 					//	a(href="pip-cooking.html") PIP preparing and cooking food question
+			.span4
+				h2#brand Branding
+				ul
+					//li
+					//	a(href="cards.html") Cards
+					//li
+					//	a(href="speech-line.html") Speech line
+					//li
+					//	a(href="brand-icons.html") Brand icons
