--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -318,6 +318,55 @@ pre[class*="language-"] {
     }
 }
 
+/***************************************************************************
+* Speech lines
+* Used as a brand callout for content
+* see speech-lines.html
+*/
+.speech-lines {
+    border-bottom: .5rem solid @heritage-blue;
+    margin-bottom: .75rem;
+    :first-child {
+        font-weight: @font-weight-bolder;
+        font-size: @font-size-larger;
+    }
+    .card-banner-top {
+        border-radius: @form-border-radius @form-border-radius 0 0;
+        :first-child {
+            padding: 1rem 0 1rem 1rem;
+        }
+    }
+}
+
+.arrow_box {
+    position: relative;
+    background: #fff;
+    border: 8px solid #004b88;
+}
+.arrow_box:after, .arrow_box:before {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.arrow_box:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-top-color: #fff;
+    border-width: 30px;
+    margin-left: -30px;
+}
+.arrow_box:before {
+    border-color: rgba(0, 75, 136, 0);
+    border-top-color: #004b88;
+    border-width: 41px;
+    margin-left: -41px;
+}
+
 
 /***************************************************************************
  * Colours
