Include initial commit of brand speech line styling

--- a/libs/jade/brand-icons.jade
+++ b/libs/jade/brand-icons.jade
@@ -59,7 +59,7 @@ block content
 					.span2
 						.brand-tv_monitor
 					.span2
-						.brand-shopping_cart
+						.brand-heart
 					.span2
 						.brand-todolist_check
 
@@ -107,7 +107,7 @@ block content
 					.span2
 						.brand-tv_monitor
 					.span2
-						.brand-shopping_cart
+						.brand-heart
 					.span2
 						.brand-todolist_check
 
