--- a/libs/jade/speech-line.jade
+++ b/libs/jade/speech-line.jade
@@ -21,13 +21,24 @@ block content
 			ul
 				li use the same colour text and line
 				li try not to use more than one speech line per page of content.
+			.speech-lines
+				h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
+				p Quote from William Shakespear 1690
+				.box-speech-line
 
-			.example-box-plain
-				label(style="margin-bottom:1rem;") Speech example
-				.row(style="font-size:2em;color:#004b88;")
-					.span12.speech-lines
-						h3 An example of a quote in a report when the speech line should be used instead of the speech bubble.
+
+			.example-box-plain(style="margin-top:100px; !important")
+				label(style="margin-bottom:1rem;") Speech line
+				.row
+					.span12
+						.speech-lines
+							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p Quote from William Shakespear 1690
+							.box-speech-line
 
 			pre
 				code.language-html
-					| &lt;div class="brand-..."&gt;
+					| &lt;div class="speech-lines"&gt;
+					| &lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
+					| &lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
