--- a/libs/template/sidebar-brand.jade
+++ b/libs/template/sidebar-brand.jade
@@ -2,5 +2,5 @@
 +sidebar([
 	{href: "cards.html", title: "Cards"},
     {href: "speech-line.html", title: "Speech line"},
-	{href: "brand-icon.html", title: "Brand icons"}
+	{href: "brand-icons.html", title: "Brand icons"}
 ])
