--- a/libs/jade/speech-line.jade
+++ b/libs/jade/speech-line.jade
@@ -42,3 +42,36 @@ block content
 					| &lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
 					| &lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
 					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
+
+
+			.example-box-plain(style="margin-top:100px; !important")
+				label(style="margin-bottom:1rem;") Speech line
+				.row
+					.span12
+						.speech-lines-purple
+							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p Quote from William Shakespear 1690
+							.box-speech-line-purple
+
+			pre
+				code.language-html
+					| &lt;div class="speech-lines"&gt;
+					| &lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
+					| &lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
+
+			.example-box-plain(style="margin-top:100px; !important")
+				label(style="margin-bottom:1rem;") Speech line
+				.row
+					.span12
+						.speech-lines-teal
+							h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
+							p Quote from William Shakespear 1690
+							.box-speech-line-teal
+
+			pre
+				code.language-html
+					| &lt;div class="speech-lines"&gt;
+					| &lt;h3&gt;An example of a quote in a report when the speech line should be used instead of the speech bubble&lt;/h3&gt;
+					| &lt;p&gt;Quote from William Shakespear 1690&lt;/p&gt;
+					| &lt;div class="box-speech-line"&gt;&lt;/div&gt;
