--- a/libs/jade/cards.jade
+++ b/libs/jade/cards.jade
@@ -7,11 +7,11 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Modules", href: "index.html#modules"}, 
+		{title: "Branding", href: "index.html#branding"}, 
 		{title: "Cards"}])
 
 block sidebar
-	include ../template/sidebar-modules.jade
+	include ../template/sidebar-brand.jade
 
 block content
 	.articleContent
