--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -98,9 +98,9 @@ block content
 			.span4
 				h2#brand Branding
 				ul
-					//li
-					//	a(href="cards.html") Cards
-					//li
-					//	a(href="speech-line.html") Speech line
-					//li
-					//	a(href="brand-icons.html") Brand icons
+					li
+						a(href="cards.html") Cards
+					li
+						a(href="speech-line.html") Speech line
+					li
+						a(href="brand-icons.html") Brand icons
