--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -263,8 +263,8 @@ li > ol {
 
     & > li:before {
         margin: 0 .25 0 -.5;
-        font-family: 'FontAwesome';
-        content: '\f00c';
+        font-family: 'cab-icons';
+        content: '\2716';
     }
 }
 
@@ -275,7 +275,7 @@ li > ol {
 
     & > li:before {
             margin: 0 .25 0 -.5;
-            font-family: 'FontAwesome';
-            content: '\f00d';
+            font-family: 'cab-icons';
+            content: '\2716';
     }
 }
