--- a/libs/mixins/btn-icon.less
+++ b/libs/mixins/btn-icon.less
@@ -9,7 +9,7 @@
     padding-@{position}: 2.5em;
     &:after {
         @{position}: 1em;
-        font-family: 'Helvetica', 'FontAwesome';
+        font-family: 'cab-icons' !important;
         font-weight: 300;
         content: @icon;
         color: @color;
@@ -26,7 +26,7 @@
             height: 2em;
             border: 2px solid @color;
             .round(@round-colour: @color;);
-            .vertical-align(absolute);  
+            .vertical-align(absolute);
         }
     }
 }
