--- a/libs/modules/cookie-monster.less
+++ b/libs/modules/cookie-monster.less
@@ -31,7 +31,7 @@
         }
     }
     &__close {
-        .btn-icon("\f00d");
+        .btn-icon("\2716");
         float: right;
     }
     @media screen and (max-width: @screen-xs-max) {
