--- a/libs/site.less
+++ b/libs/site.less
@@ -1,7 +1,8 @@
 /* Vendor files */
 @import "vendors/normalize";
-@import "vendors/font-awesome/less/font-awesome";
+//@import "vendors/font-awesome/less/font-awesome";
 @import "vendors/brand-icon";
+@import "vendors/cab-icons";
 
 /* Override files */
 @import "styleguide/guide";
